# Nautonomous_JetsonTX1_DEPRECATED

nautonomous_ws4/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
nautonomous_ws4/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_actuation_selector/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_actuation_simulator/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_actuation_synchronizer/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_collaboration_bluetooth/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_navigation_configuration/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_navigation_gps/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_navigation_navigate/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_navigation_transform/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_operation_action_client/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/devel/.private/nautonomous_operator_actuation/: .catkin  .rosinstall  setup.sh
nautonomous_ws4/logs/nautonomous_navigation_navigate/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr
nautonomous_ws4/logs/nautonomous_operation_action_client/: build.make.000.log.stderr  build.make.020.log.stderr  build.make.022.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.030.log.stderr  build.make.032.log.stderr  build.make.034.log.stderr  build.make.037.log.stderr  build.make.089.log.stderr  build.make.090.log.stderr  build.make.095.log.stderr  build.make.096.log.stderr
nautonomous_ws5/WaternetNautonomous/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
nautonomous_ws5/WaternetNautonomous/src/nautonomous_serverconnection_logger_server/: CMakeLists.txt
nautonomous_ws5/WaternetNautonomous/src/nautonomous_serverconnection_logger_server/include/nautonomous_serverconnection_logger_server/: logger_server.h
nautonomous_ws5/WaternetNautonomous/src/nautonomous_serverconnection_logger_server/scripts/: ConnectionRequestsHandler.py
nautonomous_ws5/WaternetNautonomous/src/nautonomous_serverconnection_logger_server/src/: logger_server.cpp
(+1220 files in other folders)
